--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,16 @@ body{
   width: 100vw;
 }
 
+.App input{
+  width: 600px;
+  padding: 10px;
+  margin: 10px;
+  font-size: 16px;
+  border-radius: 15px;
+  border: none;
+  background-color: rgb(219, 219, 219);
+}
+
 .heading{
   font-size: 3.5rem;
   font-style: italic;
