--- a/src/components/App.css
+++ b/src/components/App.css
@@ -67,3 +67,21 @@ body{
   max-width: 250px;
   max-height: auto;
 }
+
+#superhero-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#superhero-form button{
+  font-family: 'comic sans ms';
+  width: 150px;
+  padding: 10px;
+  margin: 10px;
+  font-size: 16px;
+  border-radius: 15px;
+  border: none;
+  color: rgb(255, 197, 16);
+  background-color: rgb(238, 84, 84);
+}
